    fail. It's a new test which fails intermitently on the buildds and a known
    upstream problem.
  * patches/hppa/submitted-mathdef.diff: new patch from John David Anglin to
    define __NO_LONG_DOUBLE_MATH on hppa.  Closes: #805836.

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-tls-threadvar.diff: Update, to fix recursion while
    accessing TLS while locking for accessing TLS.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Nov 2015 20:20:54 +0100

glibc (2.21-0experimental3) experimental; urgency=medium

  [ Aurelien Jarno ]
  * patches/hppa/cvs-allocatestack-stacktop.diff: new patch from upstream
    to fix a set-but-unused warning in nptl/allocatestack.c, causing a
    build failure.
  * patches/hppa/local-stack-grows-up.diff: rebase.
  * patches/any/cvs-tls-dtv.diff: new patch from upstream to fix fix DTV race,
    assert, and DTV_SURPLUS Static TLS limit.  This also reduces the failure
    rate of nptl/tst-stack4.  Closes: #793641.
  * Add expected testsuite result for mips64el:
    - testsuite-checking/expected-results-mips64el-linux-gnu-libc
    - testsuite-checking/expected-results-mips64el-linux-gnuabin32-mipsn32
    - testsuite-checking/expected-results-mipsel-linux-gnu-mips32
  * patches/kfreebsd/local-sysdeps.diff, patches/kfreebsd/local-fbtl.diff:
    update to revision 5844 (from glibc-bsd):
    - Update to glibc 2.21.
    - Define F_DUP2FD_CLOEXEC.  Closes: #712074.
    - Define SOCK_CLOEXEC and SOCK_NONBLOCK.
    - Wire-up accept4.  Closes: #722885.
  * sysdeps/kfreebsd-{amd64,i386}.mk: configure with --disable-werror.
  * patches/kfreebsd/local-nscd-no-sockcloexec.diff: Drop.
  * patches/kfreebsd/local-getaddrinfo-freebsd-kernel.diff: improve and remove
    a warning.
  * patches/kfreebsd/local-tst-auxv.diff: new patch to disable AT_EXECFN
    testing in tst-auxv when it is not defined.
  * patches/any/cvs-rfc3542-advanced-api.diff: new patch from usptream to
    add missing Advanced API (RFC3542) (1) defines.  Closes: #753909.