@@ -15,6 +15,8 @@ glibc (2.21-0experimental4) UNRELEASED; urgency=medium
   [ Samuel Thibault ]
   * patches/hurd-i386/tg-tls-threadvar.diff: Update, to fix recursion while
     accessing TLS while locking for accessing TLS.
+  * patches/hurd-i386/tg-context_functions.diff: Update, to fix sigprocmask
+    visibility.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Nov 2015 20:20:54 +0100
 
